--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <!-- Fonts -->
       <link href="https://fonts.googleapis.com/css?family=Merienda+One|Monoton" rel="stylesheet">
       <!-- styles -->
-      <link rel="stylesheet" href="main.css">   
+      <link rel="stylesheet" href="main.css">
     </head>
     <body>
       <!-- Header -->
@@ -14,6 +14,7 @@
         <h1>pixel art maker</h1>
       </header>
 
+      <!-- Content -->
       <div class="content">
         <!-- Form-->
         <form class="form" id="myForm">
@@ -26,7 +27,7 @@
               <label for="gridHeight">Grid Height</label>
               <input type="number" id="gridHeight" name="height" min="1" max="100" value="1">
 
-              <label for="gridWidth">Grid Hidth</label>
+              <label for="gridWidth">Grid Width</label>
               <input type="number" id="gridWidth" name="width" min="1" max="100" value="1">
 
           </div>
@@ -46,21 +47,23 @@
           </div>
         </form>
 
-
       </div><!-- .content -->
+
       <!-- Grid -->
       <div class="grid">
-        <!--<ol>
+        <ul>
           <li>click for fill the cell by color</li>
           <li>double click for delete the color from the cell</li>
-        </ol>-->
+        </ul>
         <h2>Design canvas</h2>
         <table id="grid"></table>
       </div>
-      
+
+      <!-- Footer -->
       <div class="footer">
         <span>Made With Love By: Ahmed Abdel Mgeed &copy;</span>
       </div>
+
       <!-- Plugins -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
