--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="grid">
         <ul>
           <li>click for fill the cell by color</li>
-          <li>double click for delete the color from the cell</li>
+          <li>double click for delete the color :)</li>
         </ul>
         <h2>Design canvas</h2>
         <table id="grid"></table>
